# sync-play

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  build.rs  compose.yaml  generate_entities.sh
.github/workflows/: docker-build.yaml  docker-dev.yaml  docker-release.yaml
frontend/: .gitignore  .prettierrc  eslint.config.js  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html  app.ts
frontend/src/components/essentials/: BasicLayout.svelte  Footer.svelte  Navbar.svelte
frontend/src/routes/: +layout.svelte
frontend/src/routes/(login)/: +layout.svelte
frontend/src/routes/(login)/projects/[project]/: +page.svelte
frontend/src/routes/(login)/rooms/: +page.svelte
frontend/src/routes/(login)/rooms/[id]/: +page.svelte
frontend/src/routes/(no_login)/: +layout.svelte  +page.svelte
frontend/src/routes/(no_login)/about/: +layout@.svelte  +page.svelte
frontend/src/routes/login/: +layout.svelte  +page.svelte
migration/: Cargo.toml
migration/src/: lib.rs  m00000000_000000_sample.rs
src/: app_data.rs  error.rs  frontend.rs  main.rs  room.rs  update_value.rs  user.rs
