[package]
name = "actix-svelte-example"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]
exclude = ["svelte-path-finder"]

[dependencies]
svelte-path-finder = { path = "./svelte-path-finder" }
authentication-service = { git = "https://github.com/riseupgroup/authentication-service.git" }
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
static-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.11.0", features = ["runtime-async-std-rustls", "sqlx-mysql", "macros"] }
migration = { path = "migration" }
lazy_static = "1.5.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.127"
shellexpand = "3.1.0"

[build-dependencies]
static-files = "0.2.1"
