[package]
name = "sync-play"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = ["svelte-path-finder"]

[dependencies]
svelte-path-finder = { path = "./svelte-path-finder" }
authentication-service = { git = "https://github.com/riseupgroup/authentication-service.git" }
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
static-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.127"
shellexpand = "3.1.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
tokio = { version = "1.44.0", features = ["sync", "time", "macros"] }

[build-dependencies]
static-files = "0.2.1"
